--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ tiktoken = "^0.6.0"
 tabulate = "^0.9.0"
 sqlalchemy = "^2.0.29"
 langchain-experimental = "^0.0.56"
+google-cloud-bigquery-storage = "^2.24.0"
+faiss-gpu = "^1.7.2"
 
 
 [build-system]
