--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ plotly-express = "^0.4.1"
 plotly = "^5.20.0"
 google-cloud-bigquery-storage = "^2.24.0"
 faiss-gpu = "^1.7.2"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
